--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/AccountPropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/AccountPropositionsPartial.cshtml
@@ -1,18 +1,23 @@
 ﻿@model bad_each_way_finder.Pages.Shared.PropositionsModel
 
-<div class="row bg-green-bright p-3 rounded border border-dark mb-1"><span class="font-lg">Today's Tracked Propositions</span></div>
 <div class="row bg-sub-header font-md p-3 rounded border border-dark mb-1">
     <div class="col-1">Saved At</div>
     <div class="col-1">Meeting</div>
     <div class="col-1">Time</div>
     <div class="col-2">Runner Name</div>
-    <div class="col-1">Odds</div>
-    <div class="col-1">EW Terms</div>
-    <div class="col-2">Saved At Prices</div>
-    <div class="col-2">Latest Prices</div>
+    <div class="col-1">
+        <span type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Saved Odds">Odds</span>
+    </div>
+    <div class="col-1">
+        <span type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Latest Each Way Terms">EW Terms</span>
+    </div>
+    <div class="col-2">
+        <span type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Saved Prices">Saved At Prices</span>
+    </div>
+    <div class="col-2">
+        <span type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Latest Prices">Latest Prices</span>
+    </div>    
     <div class="col-1">Save/Remove</div>
-
-
 </div>
 <div class="row border border-dark rounded p-3 mb-5 bg-light-blue">
     <div class="col-12">
