--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SelectedRacePartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SelectedRacePartial.cshtml
@@ -4,7 +4,7 @@
     var selectedRace = Model.SelectedRace;
 }
 <div id="selected-race">
-@if (selectedRace != null)
+@if (selectedRace != null && selectedRace.EventDateTime != default)
 {
 
         <div class="row border border-dark rounded p-3 mb-3 bg-green-bright">
@@ -20,23 +20,22 @@
                 RunnerName
             </div>
             <div class="col-1">
-                Sbk Win
+                <span type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Sportsbook Win Price">Sbk Win</span>
             </div>
             <div class="col-1">
-                Exc Win
+                <span type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Exchange Win Price with current pot">Exc Win</span>
             </div>
             <div class="col-1">
-                Win EV
+                <span type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Expected Value for the Win Market">Win EV</span>
             </div>
             <div class="col-1">
-                Exc Place
-            </div>
-
-            <div class="col-1">
-                Sbk Place
+                <span type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Exchange Place Price with current pot">Exc Place</span>
             </div>
             <div class="col-1">
-                EV
+                <span type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Sportsbook Place Price">Sbk Place</span>
+            </div>
+            <div class="col-1">
+                <span type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Expected Value for the Place Market">EV</span>
             </div>
         </div>
 
