--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Error.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Error.cshtml
@@ -7,6 +7,15 @@
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
+@if (!string.IsNullOrEmpty(Model.ExceptionMessage))
+{
+    <p>
+        <strong>
+            @Model.ExceptionMessage
+        </strong>
+    </p>
+}
+
 @if (Model.ShowRequestId)
 {
     <p>
@@ -14,7 +23,7 @@
     </p>
 }
 
-<h3>Development Mode</h3>
+@*<h3>Development Mode</h3>
 <p>
     Swapping to the <strong>Development</strong> environment displays detailed information about the error that occurred.
 </p>
@@ -23,4 +32,4 @@
     It can result in displaying sensitive information from exceptions to end users.
     For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
     and restarting the app.
-</p>
+</p>*@
