Landing page updated
Updates to look of Login & Register

--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Index.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Index.cshtml
@@ -4,7 +4,48 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<div id="welcome-page" class="">
+    <div class="row">
+        <div class="col-12 pt-5 " style="color: #FF9900;">
+            <h1><span style="font-size: 130px;">Bad Each Way Finder</span></h1>
+            <h3><span style="font-size: 70px;">Find Your Edge.</span></h3>
+        </div>
+    </div>
+    <div class="row mt-5 mb-5">
+        <div class="col-4 offset-7 text-end">
+            <a class="btn btn-lg btn-primary m-2" href="/Identity/Account/Login">Login</a>
+            <a class="btn btn-lg btn-primary m-2" href="/Identity/Account/Register">Register</a>
+            </div>
+    </div>
+        <div class="row" style="background-color: rgba(0,0,0,0.7)">
+        <div class="col-6" style="color: #FF9900;">some info on the application</div>
+            </div>
+
+@*    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="~/images/2 horses backlit.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="~/images/grandnational-horse-fans1-1030x579.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="~/images/Stock horse racing image.jpg" class="d-block w-100" alt="...">
+
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+*@</div>
