--- a/src/bad-each-way-finder/bad-each-way-finder/wwwroot/css/site.css
+++ b/src/bad-each-way-finder/bad-each-way-finder/wwwroot/css/site.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Inter:wght@100;400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Inter:wght@100;400;600;700&family=Roboto+Slab:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Inter:wght@100;400;600;700&family=Roboto+Slab:wght@300&family=Ubuntu+Mono:wght@700&display=swap');
+
 html {
   font-size: 14px;
 
@@ -27,7 +29,13 @@ body {
 }
 header, footer {
     font-family: 'Inter', sans-serif;
-    background-color: #bdcebe;
+    background-color: rgba(0,0,0, 0.9);
+    color: white;
+    min-height: 80px;
+}
+
+#welcome-page {
+    font-family: 'Ubuntu Mono', sans-serif;
 }
 
 body::after {
@@ -42,8 +50,9 @@ footer {
     height: 150px;
 }
 .site-bg {
-    background-color: #dbe3e5;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Cg fill='%2392abac' fill-opacity='0.4'%3E%3Cpath fill-rule='evenodd' d='M11 0l5 20H6l5-20zm42 31a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM0 72h40v4H0v-4zm0-8h31v4H0v-4zm20-16h20v4H20v-4zM0 56h40v4H0v-4zm63-25a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM53 41a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-30 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-28-8a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zM56 5a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zm-3 46a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM21 0l5 20H16l5-20zm43 64v-4h-4v4h-4v4h4v4h4v-4h4v-4h-4zM36 13h4v4h-4v-4zm4 4h4v4h-4v-4zm-4 4h4v4h-4v-4zm8-8h4v4h-4v-4z'/%3E%3C/g%3E%3C/svg%3E");
+    background-image: url("../../images/black-and-white-ground-shot.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .bg-mintcream {
     background-color: #F5FFFA;
