--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/PropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/PropositionsPartial.cshtml
@@ -31,7 +31,7 @@
     <div class="row bg-green-bright p-3 rounded border border-dark mb-1 mt-3">
         <a class="text-dark" style="text-decoration: none;" data-bs-toggle="collapse" href="#account-collapse" role="button" aria-expanded="false" aria-controls="account-collapse">
             <span class="font-lg">
-                Your Tracked Propositions for Today' Racing'
+                Your Tracked Propositions for Today's Racing
                 <span type="button" class="bg-green-bright border border-0" data-bs-toggle="tooltip" data-bs-placement="top" title="Your Saved Propositions for Today's Racing">
                     <i class="fa-solid fa-circle-info"></i>
                 </span>
