--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/_Layout.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
             </div>
         </nav>
     </header>
-    <div class="container" style="min-height: 100vh;">
+    <div class="container" style="min-height: 80vh;">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -50,7 +50,89 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - bad_each_way_finder - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            @*&copy; 2023 - bad_each_way_finder - <a asp-area="" asp-page="/Privacy">Privacy</a>*@
+            <div class="footer-cta pt-5 pb-5">
+                <div class="row">
+                    <div class="col-xl-4 col-md-4 mb-30">
+                        <div class="single-cta">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="cta-text">
+                                <h4>Find us</h4>
+                                <span>1010 Avenue, sw 54321, chandigarh</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-4 mb-30">
+                        <div class="single-cta">
+                            <i class="fas fa-phone"></i>
+                            <div class="cta-text">
+                                <h4>Call us</h4>
+                                <span>9876543210 0</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-4 mb-30">
+                        <div class="single-cta">
+                            <i class="far fa-envelope-open"></i>
+                            <div class="cta-text">
+                                <h4>Mail us</h4>
+                                <span>mail@info.com</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-content pt-5 pb-5">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-6 mb-50">
+                        <div class="footer-widget">
+                            <div class="footer-social-icon">
+                                <span>Follow us</span>
+                                <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
+                                <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
+                                <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6 mb-30">
+                        <div class="footer-widget">
+                            <div class="footer-widget-heading">
+                                <h3>Useful Links</h3>
+                            </div>
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="/Propositions">about</a></li>
+                                <li><a href="/Races">Races</a></li>
+                                <li><a href="/History">History</a></li>
+                                <li><a href="#">FAQ</a></li>
+                                <li><a href="#">Contact us</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-6 text-center text-lg-left">
+                        <div class="copyright-text">
+                            <p>Copyright &copy; 2023 - bad_each_way_finder -</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
+                        <div class="footer-menu">
+                            <ul>
+                                <li><a href="/Index">Home</a></li>
+                                <li><a href="/Races">Races</a></li>
+                                <li><a href="/Propositions">Propositions</a></li>
+                                <li><a href="/History">History</a></li>
+                                <li><a href="#"></a>FAQ</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
 
