--- a/src/bad-each-way-finder/bad-each-way-finder/wwwroot/css/site.css
+++ b/src/bad-each-way-finder/bad-each-way-finder/wwwroot/css/site.css
@@ -18,17 +18,19 @@ html {
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    height: 100%;
+    box-sizing: border-box;
 }
 
 body {
     margin: 0;
+    padding-bottom: 6rem;
+    min-height: 100%;
     position: relative;
     font-family: 'Roboto Slab', sans-serif;
 }
-header, footer {
-    font-family: 'Inter', sans-serif;
+header {
+    font-family: 'Ubuntu Mono', sans-serif;
     background-color: rgba(0,0,0, 0.9);
     color: white;
     min-height: 80px;
@@ -44,16 +46,19 @@ body::after {
     height: 150px;
 }
 footer {
+    font-family: 'Ubuntu Mono', sans-serif;
     position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 150px;
+    right: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: rgba(0,0,0, 0.9);
+    text-align: center;
 }
 .site-bg {
     background-image: url("../../images/black-and-white-ground-shot.jpg");
     background-size: cover;
-    background-repeat: no-repeat;
-}
+/*    background-repeat: no-repeat;
+*/}
 .bg-mintcream {
     background-color: #F5FFFA;
 }
@@ -146,3 +151,187 @@ footer {
         transform: rotate(360deg);
     }
 }
+
+/*footer*/
+.footer-cta {
+    border-bottom: 1px solid #373636;
+}
+
+.single-cta i {
+    color: #FF9900;
+    font-size: 30px;
+    float: left;
+    margin-top: 8px;
+}
+
+.cta-text {
+    padding-left: 15px;
+    display: inline-block;
+}
+
+    .cta-text h4 {
+        color: #fff;
+        font-size: 20px;
+        font-weight: 600;
+        margin-bottom: 2px;
+    }
+
+    .cta-text span {
+        color: #FF9900;
+        font-size: 15px;
+    }
+
+.footer-content {
+    position: relative;
+    z-index: 2;
+}
+
+.footer-pattern img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 330px;
+    background-size: cover;
+    background-position: 100% 100%;
+}
+
+.footer-logo {
+    margin-bottom: 30px;
+}
+
+    .footer-logo img {
+        max-width: 200px;
+    }
+
+.footer-text p {
+    margin-bottom: 14px;
+    font-size: 14px;
+    color: #7e7e7e;
+    line-height: 28px;
+}
+
+.footer-social-icon span {
+    color: #fff;
+    display: block;
+    font-size: 20px;
+    font-weight: 700;
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 20px;
+}
+
+.footer-social-icon a {
+    color: #fff;
+    font-size: 16px;
+    margin-right: 15px;
+}
+
+.footer-social-icon i {
+    height: 40px;
+    width: 40px;
+    text-align: center;
+    line-height: 38px;
+    border-radius: 50%;
+}
+
+.facebook-bg {
+    background: #3B5998;
+}
+
+.twitter-bg {
+    background: #55ACEE;
+}
+
+.google-bg {
+    background: #DD4B39;
+}
+
+.footer-widget-heading h3 {
+    color: #fff;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 40px;
+    position: relative;
+}
+
+    .footer-widget-heading h3::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: -15px;
+        height: 2px;
+        width: 50px;
+        background: #FF9900;
+    }
+
+.footer-widget ul li {
+    display: inline-block;
+    float: left;
+    width: 50%;
+    margin-bottom: 12px;
+}
+
+    .footer-widget ul li a:hover {
+        color: #ff5e14;
+    }
+
+    .footer-widget ul li a {
+        color: #878787;
+        text-transform: capitalize;
+    }
+
+.subscribe-form {
+    position: relative;
+    overflow: hidden;
+}
+
+    .subscribe-form input {
+        width: 100%;
+        padding: 14px 28px;
+        background: #2E2E2E;
+        border: 1px solid #2E2E2E;
+        color: #fff;
+    }
+
+    .subscribe-form button {
+        position: absolute;
+        right: 0;
+        background: #ff5e14;
+        padding: 13px 20px;
+        border: 1px solid #ff5e14;
+        top: 0;
+    }
+
+        .subscribe-form button i {
+            color: #fff;
+            font-size: 22px;
+            transform: rotate(-6deg);
+        }
+
+.copyright-area {
+    background: #202020;
+    padding: 25px 0;
+}
+
+.copyright-text p {
+    margin: 0;
+    font-size: 14px;
+    color: #878787;
+}
+
+    .copyright-text p a {
+        color: #ff5e14;
+    }
+
+.footer-menu li {
+    display: inline-block;
+    margin-left: 20px;
+}
+
+    .footer-menu li:hover a {
+        color: #ff5e14;
+    }
+
+    .footer-menu li a {
+        font-size: 14px;
+        color: #878787;
+    }
