Index page design

--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/_Layout.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 
 </head>
 <body class="site-bg">
-    <header class="border-bottom">
+    <header class="border-bottom pt-2">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark  box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Bad Each Way Finder</a>
@@ -50,7 +50,6 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            @*&copy; 2023 - bad_each_way_finder - <a asp-area="" asp-page="/Privacy">Privacy</a>*@
             <div class="footer-cta pt-5 pb-5">
                 <div class="row">
                     <div class="col-xl-4 col-md-4 mb-30">
@@ -58,7 +57,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="cta-text">
                                 <h4>Find us</h4>
-                                <span>1010 Avenue, sw 54321, chandigarh</span>
+                                <span>21 Main Street, Town, Co. Dublin, Ireland</span>
                             </div>
                         </div>
                     </div>
@@ -67,7 +66,7 @@
                             <i class="fas fa-phone"></i>
                             <div class="cta-text">
                                 <h4>Call us</h4>
-                                <span>9876543210 0</span>
+                                <span>081 23456789</span>
                             </div>
                         </div>
                     </div>
@@ -76,7 +75,7 @@
                             <i class="far fa-envelope-open"></i>
                             <div class="cta-text">
                                 <h4>Mail us</h4>
-                                <span>mail@info.com</span>
+                                <span>info@badeachwayracefinder.com</span>
                             </div>
                         </div>
                     </div>
@@ -88,9 +87,9 @@
                         <div class="footer-widget">
                             <div class="footer-social-icon">
                                 <span>Follow us</span>
-                                <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
-                                <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
-                                <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
+                                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f facebook-bg"></i></a>
+                                <a href="https://www.X.com" target="_blank"><i class="fab fa-twitter twitter-bg"></i></a>
+                                <a href="https://www.google.ie" target="_blank"><i class="fab fa-google-plus-g google-bg"></i></a>
                             </div>
                         </div>
                     </div>
@@ -100,12 +99,12 @@
                                 <h3>Useful Links</h3>
                             </div>
                             <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="/Propositions">about</a></li>
-                                <li><a href="/Races">Races</a></li>
-                                <li><a href="/History">History</a></li>
+                                <li><a href="https://www.betfair.com/exchange/plus/en/horse-racing-betting-7" target="_blank">BetFair Exchange</a></li>
+                                <li><a href="https://www.paddypower.com/horse-racing" target="_blank">Paddy Power</a></li>
+                                <li><a href="https://www.betfair.com/sport/horse-racing" target="_blank">BetFair Sportsbook</a></li>
+                                <li><a href="https://www.gamblingcommission.gov.uk/authorities/guide/page/safeguarding-and-gambling" target="_blank">Gambling Commission</a></li>
+                                <li><a href="https://www.gamstop.co.uk/" target="_blank">GamStop</a></li>
                                 <li><a href="#">FAQ</a></li>
-                                <li><a href="#">Contact us</a></li>
                             </ul>
                         </div>
                     </div>
