--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Index.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Index.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Home page";
 }
 
-<div id="welcome-page" class="">
-    <div class="row">
+<div id="welcome-page" style="background-color: rgba(0,0,0,0.7)">
+    <div class="row p-5">
         <div class="col-12 pt-5 " style="color: #FF9900;">
             <h1><span style="font-size: 130px;">Bad Each Way Finder</span></h1>
             <h3><span style="font-size: 70px;">Find Your Edge.</span></h3>
@@ -13,12 +13,20 @@
     </div>
     <div class="row mt-5 mb-5">
         <div class="col-4 offset-7 text-end">
-            <a class="btn btn-lg btn-primary m-2" href="/Identity/Account/Login">Login</a>
-            <a class="btn btn-lg btn-primary m-2" href="/Identity/Account/Register">Register</a>
+            <a class="btn btn-xl btn-primary m-2" href="/Identity/Account/Login">Login</a>
+            <a class="btn btn-xl btn-primary m-2" href="/Identity/Account/Register">Register</a>
+            <p class="text-end text-light">Please Gamble Responsibly. 18+</p>
             </div>
     </div>
-        <div class="row" style="background-color: rgba(0,0,0,0.7)">
-        <div class="col-6" style="color: #FF9900;">some info on the application</div>
+        <div class="row p-5 border border-dark rounded-3" style="background-color: rgba(0,0,0,0.9)">
+        <div class="col-7" style="color: #FF9900;">
+            <div style="font-size: 26px;">
+                <p><i class="fa-regular fa-square-check" style="color: forestgreen"></i> Discover Bad Each Way Bets in Real Time</p>
+                <p><i class="fa-regular fa-square-check" style="color: forestgreen"></i> Uses BetFair Exchange to Identify Positive EV Bets</p>
+                <p><i class="fa-regular fa-square-check" style="color: forestgreen"></i> Track Your Selections with Our Live Tracker</p>
+                <p><i class="fa-regular fa-square-check" style="color: forestgreen"></i> See full History of Your Selections</p>
+            </div>
+        </div>
             </div>
 
 @*    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
