--- a/src/bad-each-way-finder/bad-each-way-finder/wwwroot/css/site.css
+++ b/src/bad-each-way-finder/bad-each-way-finder/wwwroot/css/site.css
@@ -117,6 +117,13 @@ footer {
 .text-dark-magenta {
     color: #8b008b;
 }
+.btn-xl{
+    min-height:75px;
+    min-width: 150px;
+    font-size:2rem;
+    text-align: center;
+    padding: 20px;
+}
 
 /*https://www.w3schools.com/howto/howto_css_loader.asp*/
 * {
