--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Propositions.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Propositions.cshtml
@@ -10,6 +10,7 @@
 <div>
     @await Html.PartialAsync("PropositionsPartial", Model)
 </div>
+<div id="swal-loc">Propositions div</div>
 
 <script>
     $(document).ready(function () {
